# gerrit-reviewer

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
src/gerrit_reviewer/: __init__.py  cli.py  config.py  log_utils.py  stream.py
src/gerrit_reviewer/hooks/transforms/: gerrit-review.js
src/gerrit_reviewer/skill/: SKILL.md
src/gerrit_reviewer/systemd/: gerrit-reviewer-stream.service
